Modificacion: Fuentes y tamanos

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </header>
 
     <main>
-        <a href="./fuentes.html" class="fuente-importada">Fuentes</a>
+        <a href="./fuentes.html" class="fuente-importada">Fuentes y tamaños</a>
         <a href="./colores.html" class="fuente-importada colores">Colores</a>
         <a href="./iconos.html" class="fuente-importada iconos">Iconos</a>
         <!-- <a href="./iconos.html" class="abc">Nuevo texto</a> -->
